Fixed an issue where the chat box colour was dark on dark mode

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -57,7 +57,9 @@ $bad-colour: #ea2e49;
 .app-container.dark-mode h4,
 .app-container.dark-mode h5,
 .app-container.dark-mode h6,
-.app-container.dark-mode .chat-message {
+.app-container.dark-mode .chat-message,
+.app-container.dark-mode #message
+ {
   color: #fff;
 }
 
